package com.fhnw.TechTitans.model;

public enum Role {
    USER, ADMIN, TRUCKDRIVER, SHIPPER
}